--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\jitenderkumar05\AppData\Local\Temp\testng-eclipse-1943103861\testng-customsuite.xml</span>
+                    <span>C:\Users\jitenderkumar05\AppData\Local\Temp\testng-eclipse-919728404\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\jitenderkumar05\AppData\Local\Temp\testng-eclipse-1943103861\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\jitenderkumar05\AppData\Local\Temp\testng-eclipse-919728404\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -189,12 +189,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'Testgoogle')
 data.setCell(0, 2, 'Bench_Tranning.Bench_Tranning.AppTest')
-data.setCell(0, 3, 54923);
+data.setCell(0, 3, 64079);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 54 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
